--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,76 @@
-body {
-    color: red;
+.conversion-setup {
+    width: 550px;
+    height: 285px;
+    background: #6943FF;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+
+    color: white;
 }
+
+.conversion-setup > input {
+        box-sizing: border-box;
+        background: #6943FF;
+    
+        width: 117px;
+        height: 83px;
+    
+        border: 2px solid #B295FF;
+        border-radius: 5px;
+
+        color: white;
+        font-size: 3rem;
+        font-weight: bold;
+        text-align: center;
+        padding-left: 15px;
+}
+
+.conversion-setup > button {
+    width: 117px;
+    height: 42px;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+    border: none;
+}
+
+.results {
+    box-sizing: border-box;
+    width: 550px;
+    padding: 20px;
+    /* height: 729px; */
+    background: #F4F4F4;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
+
+.result-container {
+    width: 500px;
+    height: 108.57px;
+    background: #FFFFFF;
+    border-radius: 4.68077px 0px 0px 0px;
+
+    text-align: center;
+}
+
+.result-container > h3 {
+    color: #5A537B;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 20px;
+}
+
+.result-container > p {
+    color: #353535;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+
