--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
     border: none;
+    cursor: pointer;
 }
 
 .results {
