--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .conversion-setup {
     width: 550px;
     height: 285px;
